RESOLVED FIXED 112370
[Texmap] REGRESSION (r144190): Failure at style with preserve-3d and opacity
https://bugs.webkit.org/show_bug.cgi?id=112370
Summary [Texmap] REGRESSION (r144190): Failure at style with preserve-3d and opacity
Tullio Lucena
Reported 2013-03-14 11:33:00 PDT
Created attachment 193160 [details] Test After apply the opacity style and webkit-transform with rotateX or rotateY, the opacity doesn't change.
Attachments
Test (224 bytes, text/html)
2013-03-14 11:33 PDT, Tullio Lucena
no flags
Patch (4.73 KB, patch)
2013-03-15 08:30 PDT, Noam Rosenthal
no flags
Patch (4.66 KB, patch)
2013-03-15 09:30 PDT, Noam Rosenthal
no flags
Noam Rosenthal
Comment 1 2013-03-15 08:30:40 PDT
Rafael Brandao
Comment 2 2013-03-15 09:05:11 PDT
(In reply to comment #1) > Created an attachment (id=193315) [details] > Patch It works for Nix and Qt. :-)
Caio Marcelo de Oliveira Filho
Comment 3 2013-03-15 09:12:05 PDT
Comment on attachment 193315 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=193315&action=review > LayoutTests/compositing/overlap-blending/preserves3d-opacity-expected.html:14 > + .solid { > + position: absolute; > + width: 200px; > + height: 200px; > + background-color: green; > + } This is not used. > LayoutTests/compositing/overlap-blending/preserves3d-opacity-expected.html:18 > + .a { top: 0px; left: 0px;} > + .b { top: 100px; left: 0px;} This is not used.
Caio Marcelo de Oliveira Filho
Comment 4 2013-03-15 09:15:24 PDT
Comment on attachment 193315 [details] Patch The code change itself LGTM.
Noam Rosenthal
Comment 5 2013-03-15 09:30:39 PDT
WebKit Review Bot
Comment 6 2013-03-15 10:09:53 PDT
Comment on attachment 193323 [details] Patch Clearing flags on attachment: 193323 Committed r145911: <http://trac.webkit.org/changeset/145911>
WebKit Review Bot
Comment 7 2013-03-15 10:09:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.