Source/WebCore: [Texmap] REGRESSION (r144190): Failure at style with preserve-3d and opacity https://bugs.webkit.org/show_bug.cgi?id=112370

According to spec, we avoid masking and clipping when preserves-3d is enabled.
However, opacity should still work.
Allowing opacity when preserves-3d is on.

Patch by No'am Rosenthal <noam@webkit.org> on 2013-03-15
Reviewed by Caio Marcelo de Oliveira Filho.

Test: compositing/overlap-blending/preserves3d-opacity.html

* platform/graphics/texmap/TextureMapperGL.cpp:
* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::paintRecursive):

LayoutTests: [Texmap] REGRESSION (r144190): Failure at style with webkit-transform and opacity
https://bugs.webkit.org/show_bug.cgi?id=112370

Patch by No'am Rosenthal <noam@webkit.org> on 2013-03-15
Reviewed by Caio Marcelo de Oliveira Filho.

New ref-test for opacity+preserves-3d.

* compositing/overlap-blending/preserves3d-opacity-expected.html: Added.
* compositing/overlap-blending/preserves3d-opacity.html: Added.

Canonical link: https://commits.webkit.org/130745@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145911 268f45cc-cd09-0410-ab3c-d52691b4dbfc